--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <title>Address Book</title>
 </head>
-<body onload="user()">
+<body>
 <div id="input">
     <input id="numUsers" type="number" placeholder="How Many Users">
     <button onclick="user()">Submit</button>
